feat: update fitter's READMEs

--- a/content/docs/fitter/fitter.mdx
+++ b/content/docs/fitter/fitter.mdx
@@ -148,95 +148,118 @@ All configurations for an `IdeaSearchFitter` instance are set in its `__init__` 
 
 ## Workflow
 
-The following is a complete workflow example demonstrating how to use `IdeaSearch-fit` and `IdeaSearch` to solve a symbolic regression problem.
+The following is a complete workflow example (from [https://github.com/IdeaSearch/IdeaSearch-fit-test](https://github.com/IdeaSearch/IdeaSearch-fit-test)) that demonstrates how to solve a symbolic regression problem using `IdeaSearch-fit` and `IdeaSearch`.
 
 ```python
 import numpy as np
 from IdeaSearch import IdeaSearcher
 from IdeaSearch_fit import IdeaSearchFitter
 
-def main():
-    # 1. Prepare Data
-    # Let's assume we want to discover the formula f(t) = 1.23 * sin(4.56 * t) + 7.89
-    np.random.seed(42)
-    t_data = np.linspace(-10, 10, 100).reshape(-1, 1)
-    y_true = 1.23 * np.sin(4.56 * t_data.flatten()) + 7.89
-    y_error = np.random.normal(0.1, 0.01, y_true.shape) # Simulate measurement errors
-    y_data = y_true + np.random.normal(0, y_error) # Generate noisy data based on errors
 
-    # Core input: x, y, error
-    data_dict = {"x": t_data, "y": y_data, "error": y_error}
+def build_data():
+    """
+    Builds simulated data for fitting.
+    True Formula: x = 1.2*A + A*exp(-0.7*gamma*t) - A*exp(-0.5*gamma*t)*cos(3*omega*t)
+    """
+    n_samples = 1000
+    rng = np.random.default_rng(seed=42)
+
+    # Define the value ranges for the independent variables
+    A_range = (1.0, 10.0)
+    gamma_range = (0.1, 1.0)
+    omega_range = (1.0, 5.0)
+    t_range = (0.0, 10.0)
+
+    # Sample randomly within the defined ranges
+    A_samples = rng.uniform(A_range[0], A_range[1], n_samples)
+    gamma_samples = rng.uniform(gamma_range[0], gamma_range[1], n_samples)
+    omega_samples = rng.uniform(omega_range[0], omega_range[1], n_samples)
+    t_samples = rng.uniform(t_range[0], t_range[1], n_samples)
+
+    # Stack the independent variables into the format required by the Fitter (n_samples, n_features)
+    x_data = np.stack([A_samples, gamma_samples, omega_samples, t_samples], axis=1)
+
+    # Calculate the y values based on the true formula and add noise
+    y_true = (1.2 * A_samples +
+              A_samples * np.exp(-0.7 * gamma_samples * t_samples) -
+              A_samples * np.exp(-0.5 * gamma_samples * t_samples) * np.cos(3 * omega_samples * t_samples))
+    error_data = 0.01 + 0.02 * np.abs(y_true)
+    y_data = y_true + rng.normal(0, error_data)
+
+    # Note: This example does not pass error_data to the Fitter, so MSE will be used as the metric.
+    return {
+        "x": x_data,
+        "y": y_data,
+    }
+
+
+def main():
+    # 1. Prepare the data
+    data = build_data()
 
     # 2. Initialize IdeaSearchFitter
-    # This fitter object will act as the "brain" for IdeaSearch, providing all necessary configurations.
     fitter = IdeaSearchFitter(
-        # -- Task Input & Output --
-        data=data_dict,
-        result_path="./fit_results", # Ensure this directory exists
-
-        # -- Problem Definition & Units --
-        perform_unit_validation=True,
-        variable_names=["t"],
-        variable_units=["s"],      # Assume t is time in seconds
-        output_name="position",
-        output_unit="m",          # Assume y is position in meters
-
-        # -- Search & Evolution Strategy --
-        optimization_method="differential-evolution", # Use a global optimization algorithm
-        optimization_trial_num=200,                   # Increase optimization trials
-        enable_mutation=True,
-        enable_crossover=True,
+        result_path = "fit_results", # Ensure this directory exists
+        data = data,
+        variable_names = ["A", "gamma", "omega", "t"],
+        variable_units = ["m", "s^-1", "s^-1", "s"],
+        output_name = "x",
+        output_unit = "m",
+        constant_whitelist = ["1", "2", "pi"],
+        constant_map = {"1": 1, "2": 2, "pi": np.pi},
+        auto_polish = True,
+        generate_fuzzy = True,
+        perform_unit_validation = True,
+        optimization_method = "L-BFGS-B",
+        optimization_trial_num = 5,
     )
 
     # 3. Initialize IdeaSearcher
     ideasearcher = IdeaSearcher()
 
     # 4. Basic Configuration
-    ideasearcher.set_language("en")
+    ideasearcher.set_program_name("IdeaSearch Fitter Test")
+    ideasearcher.set_database_path("database") # Ensure this directory exists
     ideasearcher.set_api_keys_path("api_keys.json")
-    ideasearcher.set_program_name("PhysicsFormulaDiscovery")
-    ideasearcher.set_database_path("./database")
+    ideasearcher.set_models(["gemini-2.5-pro"]) # Use your desired model
+
+    ideasearcher.set_record_prompt_in_diary(True) # Optional: Record prompts in the diary log
 
     # 5. Bind the Fitter! (The most crucial step)
     ideasearcher.bind_helper(fitter)
 
-    # 6. Configure Models and Run Parameters
-    ideasearcher.set_models(["Deepseek_V3"])
-    ideasearcher.set_model_temperatures([1.0])
-
-    # 7. Define and Execute the Evolutionary Loop
-    island_num = 2
+    # 6. Define and execute the evolutionary loop
+    island_num = 3
     cycle_num = 3
-    unit_interaction_num = 10
+    unit_interaction_num = 20
 
     for _ in range(island_num):
         ideasearcher.add_island()
 
     for cycle in range(cycle_num):
         print(f"---[ Cycle {cycle + 1}/{cycle_num} ]---")
-        if cycle != 0:
-            ideasearcher.repopulate_islands()
+        if cycle != 0: ideasearcher.repopulate_islands()
         ideasearcher.run(unit_interaction_num)
+        print("Done.")
 
-    # 8. Retrieve and Display Results
+    # 7. Retrieve and display the results
     print("\n---[ Search Complete ]---")
+    print(f"Best Fit Formula: {fitter.get_best_fit()}")
 
-    # Get the single best fit by accuracy
-    best_fit_formula = fitter.get_best_fit()
-    print(f"Best Fit Formula (by accuracy): {best_fit_formula}")
-
-    # Get the Pareto frontier (the core output)
-    pareto_frontier = fitter.get_pareto_frontier()
     print("\nOptimal Solutions on the Pareto Frontier:")
-    # Sort and print by complexity
-    for complexity, info in sorted(pareto_frontier.items()):
-        # Metric is reduced chi-squared if errors are provided, otherwise MSE
-        metric_key = "reduced chi squared" if "reduced chi squared" in info else "mean square error"
-        metric_value = info[metric_key]
-        print(f"  - Complexity: {complexity}, Error: {metric_value:.4g}, Formula: {info['ansatz']}")
+    pareto_frontier = fitter.get_pareto_frontier()
+    if not pareto_frontier:
+        print("  - No solutions found on the Pareto frontier.")
+    else:
+        for complexity, info in sorted(pareto_frontier.items()):
+            metric_key = "reduced chi squared" if "reduced chi squared" in info else "mean square error"
+            metric_value = info.get(metric_key, float('nan'))
+            print(f"  - Complexity: {complexity}, Error: {metric_value:.4g}, Formula: {info.get('ansatz', 'N/A')}")
+
 
 if __name__ == "__main__":
-    # Before running, ensure './fit_results' and './database' directories exist
-    # and that 'api_keys.json' is configured correctly.
+    # Before running, please ensure:
+    # 1. The './fit_results' and './database' directories exist.
+    # 2. The 'api_keys.json' file is correctly configured.
     main()
 ```
