feat: :sparkles: fully i18n support

--- a/content/docs/fitter/demo.cn.mdx
+++ b/content/docs/fitter/demo.cn.mdx
@@ -1,5 +1,5 @@
 ---
-title: IdeaSearch Fitter Demo
+title: IdeaSearch Fitter 演示示例
 description: IdeaSearch Fitter Demo使用示例 - 基于StreamLit的智能符号回归Web应用
 ---
 
