--- a/content/docs/fitter/fitter.cn.mdx
+++ b/content/docs/fitter/fitter.cn.mdx
@@ -1,6 +1,6 @@
 ---
-title: README-zh
-description: README of IdeaSearch-fit in Chinese
+title: 使用文档
+description: IdeaSearch-fit 中文README文档
 ---
 
 # 关于 IdeaSearch-fit
