--- a/content/docs/framework/framework.cn.mdx
+++ b/content/docs/framework/framework.cn.mdx
@@ -1,6 +1,6 @@
 ---
-title: README-zh
-description: README file of IdeaSearch Framework in Chinese
+title: 使用文档
+description: ideasearch 框架README文档
 ---
 
 # 关于 IdeaSearch
